# nes-emulator

./: Cargo.toml  LICENSE.md  README.md  TODO.md
src/: cpu.rs  main.rs
src/cpu/: cpu_tests.rs  opcodes.rs
