[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Sebastian Łużyński <sebastian.luzynski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.5", features = ["bundled"] }
rand = "0.8.3"
